# vinilogy

./: .env.example  .gitignore  Dockerfile  README.md  backfill_covers_batch.py  debug_col_counts.py  debug_generation.py  debug_recs.py  get_top_albums.py  pyproject.toml  railway.toml  requirements.txt  reset_db_users.py  resync_discogs_covers.py  resync_discogs_details.py  test_discogs_journey.py  verify_collection_recs.py  vinylbe.db
.github/workflows/: ci.yml
app/: __init__.py  db.py  i18n.py  main.py
app/domains/: covers.py
deploy/: build_vinilogy_serve.py  package_vinilogy_serve.sh
docs/: ESTADO_DESPLIEGUE.md  GOOGLE_CUSTOM_SEARCH_SETUP.md  GUIA_DESPLIEGUE.md  GUIA_EXPLORACION_DB.md  GUIA_GITHUB.md  INICIO_RAPIDO.md  MIGRACION_SQLITE.md  PLAN_ESTADOS_ALBUMES.md  RAILWAY_DB_MANAGEMENT.md  RAILWAY_DEPLOY.md  bigsur-retire-vinylbe-local-stepA.sql  bigsur-retire-vinylbe-local.md  checklist-prelaunch-p0.md  deploy-railway.md  fase2-cifrado-tokens.md  replit.md
docs/archive/: RECOVERY_POINT_v1.0.0.md  RECOVERY_POINT_v1.1.0.md  RECOVERY_POINT_v1.2.0.md  RECOVERY_POINT_v1.3.0.md  SOLUCION_COLLECTION_ERROR.md  SOLUCION_DB_BLOQUEADA.md  SOLUCION_ERROR_ELIMINAR_USUARIO.md
docs/mockups/: mockup_integrated.html  mockup_login.html
gateway/: db.py  main.py
gateway/static/: app-user.js  app.js  (+9 more)
migrations/: 001_user_wishlist.sql  002_google_oauth.sql  003_google_no_token.sql  004_encrypt_oauth_tokens.sql.draft
scripts/: migrate_auth_identity.py
statscore docs/: download_user_guide_pages.py  merge_docs.py
tests/: conftest.py  selftest.py
tools/: view_logs.py
(+150 files in other folders)
