[project]
name = "vinylbe"
version = "0.1.0"
description = "Vinyl record recommendation platform"
requires-python = ">=3.11"
dependencies = []

# ─── Pytest ─────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
filterwarnings = ["ignore::DeprecationWarning"]

# ─── Ruff (linter) ──────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]   # line length — black handles that

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]   # allow assert in tests
# Legacy files: pre-existing issues suppressed to keep CI green; fix incrementally
"gateway/*.py" = ["W291", "W293", "E701", "E722", "E402", "F841", "F821"]
"services/**/*.py" = ["W291", "W293", "E701", "E722", "E402", "F841", "F821"]

# ─── Black (formatter) ──────────────────────────────────────────────────────
[tool.black]
line-length = 100
target-version = ["py311"]
